Assistant checkpoint: Update service icons layout
Assistant generated file changes:
- index.html: Move icons below section titles

---

User prompt:

Could the icons for how we operate section be better under each section

--- a/index.html
+++ b/index.html
@@ -304,29 +304,29 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item position-relative">
-              <div class="icon">
+            <div class="service-item position-relative text-center">
+              <h3>Buy Businesses</h3>
+              <div class="icon mt-3">
                 <i class="bi bi-activity"></i>
               </div>
-              <h3>Buy Businesses</h3>
               <p>We specialize in acquiring businesses from retiring owners, ensuring a smooth transition and the preservation of their legacy.</p>
             </div>
           </div><!-- End Service Item -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative">
-              <div class="icon">
+            <div class="service-item position-relative text-center">
+              <h3>Invest in them</h3>
+              <div class="icon mt-3">
                 <i class="bi bi-broadcast"></i>
               </div>
-              <h3>Invest in them</h3>
               <p>Our team provides expert management to maintain and grow the businesses we acquire, leveraging decades of industry experience.</p>
             </div>
           </div><!-- End Service Item -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative">
-              <div class="icon">
+            <div class="service-item position-relative text-center">
+              <h3>For the Long-Term</h3>
+              <div class="icon mt-3">
                 <i class="bi bi-easel"></i>
               </div>
-              <h3>For the Long-Term</h3>
               <p>We are committed to the long-term growth of the businesses we acquire, focusing on innovation and sustainable practices.</p>
             </div>
           </div><!-- End Service Item -->
