Assistant checkpoint: Update service section icons
Assistant generated file changes:
- index.html: Update service section icons to better match content

---

User prompt:

i meant different icons altogehter which better reflect the titles and the content

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <div class="service-item position-relative text-center">
               <h3>Buy Businesses</h3>
               <div class="icon mt-3">
-                <i class="bi bi-activity"></i>
+                <i class="bi bi-building"></i>
               </div>
               <p>We specialize in acquiring businesses from retiring owners, ensuring a smooth transition and the preservation of their legacy.</p>
             </div>
@@ -316,7 +316,7 @@
             <div class="service-item position-relative text-center">
               <h3>Invest in them</h3>
               <div class="icon mt-3">
-                <i class="bi bi-broadcast"></i>
+                <i class="bi bi-graph-up-arrow"></i>
               </div>
               <p>Our team provides expert management to maintain and grow the businesses we acquire, leveraging decades of industry experience.</p>
             </div>
@@ -325,7 +325,7 @@
             <div class="service-item position-relative text-center">
               <h3>For the Long-Term</h3>
               <div class="icon mt-3">
-                <i class="bi bi-easel"></i>
+                <i class="bi bi-clock-history"></i>
               </div>
               <p>We are committed to the long-term growth of the businesses we acquire, focusing on innovation and sustainable practices.</p>
             </div>
