Assistant checkpoint: Enhanced Why Sell section with modern card design
Assistant generated file changes:
- leaflet.html: Enhance Why Sell section design
- assets/css/main.css: Add styles for comparison cards

---

User prompt:

on leaflet.html there is a section Why Sell to For Legacy?
Your options

Shut Down
✔ Retirement
✘ No cash to founders
✘ No work for your employees
✘ Customers let down
✘ Nothing to show for the years
✘ Legacy finished

Use a Broker
✔ Retirement
✔ Cash Payout
✘ 3-6 month process
✘ Employees fired
✘ Intervene and change your culture
✘ Typically flip your company in 3-5 years

ForLegacy
✔ Retirement
✔ Cash Payout
✔ Flexible 30-day process
✔ Operate as-is with no culture change
✔ Legacy protected
✔ Holds companies for the long term can you improve the design and look of this please

--- a/leaflet.html
+++ b/leaflet.html
@@ -191,62 +191,68 @@
       </div>
       <div class="container">
         <div class="row gy-4">
-          <!-- Shut Down Column - Darker and Duller -->
+          <!-- Shut Down Column -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item position-relative" style="background-color: #00000076; color: #ffffff;">
-              <div class="icon">
-                <i class="bi bi-exclamation-triangle-fill"></i>
+            <div class="comparison-card negative">
+              <div class="card-header">
+                <div class="icon">
+                  <i class="bi bi-exclamation-triangle-fill"></i>
+                </div>
+                <h3>Shut Down</h3>
               </div>
-              <h3 style="color: #ffffff;">Shut Down</h3>
-              <p>
-                ✔ Retirement<br>
-                ✘ No cash to founders<br>
-                ✘ No work for your employees<br>
-                ✘ Customers let down<br>
-                ✘ Nothing to show for the years<br>
-                ✘ Legacy finished
-              </p>
+              <div class="card-body">
+                <div class="feature-item positive">✔ Retirement</div>
+                <div class="feature-item negative">✘ No cash to founders</div>
+                <div class="feature-item negative">✘ No work for your employees</div>
+                <div class="feature-item negative">✘ Customers let down</div>
+                <div class="feature-item negative">✘ Nothing to show for the years</div>
+                <div class="feature-item negative">✘ Legacy finished</div>
+              </div>
             </div>
-          </div><!-- End Shut Down -->
+          </div>
 
-          <!-- Private Equity Column - Darker and Duller -->
+          <!-- Use a Broker Column -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative" style="background-color: #00000076; color: #ffffff;">
-              <div class="icon">
-                <i class="bi bi-cash-stack"></i>
+            <div class="comparison-card neutral">
+              <div class="card-header">
+                <div class="icon">
+                  <i class="bi bi-cash-stack"></i>
+                </div>
+                <h3>Use a Broker</h3>
               </div>
-              <h3 style="color: #ffffff;">Use a Broker</h3>
-              <p>
-                ✔ Retirement<br>
-                ✔ Cash Payout<br>
-                ✘ 3-6 month process<br>
-                ✘ Employees fired<br>
-                ✘ Intervene and change your culture<br>
-                ✘ Typically flip your company in 3-5 years
-              </p>
+              <div class="card-body">
+                <div class="feature-item positive">✔ Retirement</div>
+                <div class="feature-item positive">✔ Cash Payout</div>
+                <div class="feature-item negative">✘ 3-6 month process</div>
+                <div class="feature-item negative">✘ Employees fired</div>
+                <div class="feature-item negative">✘ Intervene and change your culture</div>
+                <div class="feature-item negative">✘ Typically flip your company in 3-5 years</div>
+              </div>
             </div>
-          </div><!-- End Private Equity -->
+          </div>
 
-          <!-- For Legacy Column - Highlighted -->
+          <!-- For Legacy Column -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative" ">
-              <div class="icon">
-                <i class="bi bi-award-fill"></i>
+            <div class="comparison-card positive">
+              <div class="card-header">
+                <div class="icon">
+                  <i class="bi bi-award-fill"></i>
+                </div>
+                <h3>ForLegacy</h3>
               </div>
-              <h3>ForLegacy</h3>
-              <p>
-                ✔ Retirement<br>
-                ✔ Cash Payout<br>
-                ✔ Flexible 30-day process<br>
-                ✔ Operate as-is with no culture change<br>
-                ✔ Legacy protected<br>
-                ✔ Holds companies for the long term
-              </p>
+              <div class="card-body">
+                <div class="feature-item positive">✔ Retirement</div>
+                <div class="feature-item positive">✔ Cash Payout</div>
+                <div class="feature-item positive">✔ Flexible 30-day process</div>
+                <div class="feature-item positive">✔ Operate as-is with no culture change</div>
+                <div class="feature-item positive">✔ Legacy protected</div>
+                <div class="feature-item positive">✔ Holds companies for the long term</div>
+              </div>
             </div>
-          </div><!-- End For Legacy -->
+          </div>
         </div>
       </div>
-    </section><!-- /Why Sell to For Legacy Section -->
+    </section>
 
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
