Assistant checkpoint: Added comparison options section to index.html
Assistant generated file changes:
- index.html: Add comparison options section

---

User prompt:

can you add you options section to the main index html please

--- a/index.html
+++ b/index.html
@@ -209,6 +209,77 @@
 
     </section><!-- /Features Section -->
 
+    <!-- Why Sell to For Legacy Section -->
+    <section id="why-sell" class="services section">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Why Sell to For Legacy?</h2>
+        <p>Your options</p>
+      </div>
+      <div class="container">
+        <div class="row gy-4">
+          <!-- For Legacy Column -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="comparison-card positive">
+              <div class="card-header">
+                <div class="icon">
+                  <i class="bi bi-award-fill"></i>
+                </div>
+                <h3>For Legacy</h3>
+              </div>
+              <div class="card-body">
+                <div class="feature-item positive">Retirement</div>
+                <div class="feature-item positive">Cash Payout</div>
+                <div class="feature-item positive">Flexible 30-day process</div>
+                <div class="feature-item positive">Operate as-is with no culture change</div>
+                <div class="feature-item positive">Legacy protected</div>
+                <div class="feature-item positive">Holds companies for the long term</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Use a Broker Column -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="comparison-card neutral">
+              <div class="card-header">
+                <div class="icon">
+                  <i class="bi bi-cash-stack"></i>
+                </div>
+                <h3>Use a Broker</h3>
+              </div>
+              <div class="card-body">
+                <div class="feature-item positive">Retirement</div>
+                <div class="feature-item positive">Cash Payout</div>
+                <div class="feature-item negative">3-6 month process</div>
+                <div class="feature-item negative">Employees fired</div>
+                <div class="feature-item negative">Intervene and change your culture</div>
+                <div class="feature-item negative">Typically flip your company in 3-5 years</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Shut Down Column -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="comparison-card negative">
+              <div class="card-header">
+                <div class="icon">
+                  <i class="bi bi-exclamation-triangle-fill"></i>
+                </div>
+                <h3>Shut Down</h3>
+              </div>
+              <div class="card-body">
+                <div class="feature-item positive">Retirement</div>
+                <div class="feature-item negative">No cash to founders</div>
+                <div class="feature-item negative">No work for your employees</div>
+                <div class="feature-item negative">Customers let down</div>
+                <div class="feature-item negative">Nothing to show for the years</div>
+                <div class="feature-item negative">Legacy finished</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
