Assistant checkpoint: Update comparison section with new options and styling
Assistant generated file changes:
- assets/css/main.css: Add teal background and update card styles
- index.html: Update comparison options, Update For Legacy column width

---

User prompt:

can we use that alternative teal background on it and also make it 4 options switching use a broker to Private Equity and a 3rd one to Competitor

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <div class="container">
         <div class="row gy-4">
           <!-- For Legacy Column -->
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="comparison-card positive">
               <div class="card-header">
                 <div class="icon">
@@ -237,8 +237,48 @@
             </div>
           </div>
 
+          <!-- Private Equity Column -->
+          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="comparison-card neutral">
+              <div class="card-header">
+                <div class="icon">
+                  <i class="bi bi-bank"></i>
+                </div>
+                <h3>Private Equity</h3>
+              </div>
+              <div class="card-body">
+                <div class="feature-item positive">Retirement</div>
+                <div class="feature-item positive">Cash Payout</div>
+                <div class="feature-item negative">6-12 month process</div>
+                <div class="feature-item negative">Restructure Staff</div>
+                <div class="feature-item negative">Change Management</div>
+                <div class="feature-item negative">Exit in 3-5 years</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Competitor Column -->
+          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="comparison-card neutral">
+              <div class="card-header">
+                <div class="icon">
+                  <i class="bi bi-building"></i>
+                </div>
+                <h3>Competitor</h3>
+              </div>
+              <div class="card-body">
+                <div class="feature-item positive">Retirement</div>
+                <div class="feature-item positive">Cash Payout</div>
+                <div class="feature-item negative">Extended Due Diligence</div>
+                <div class="feature-item negative">Staff Integration Issues</div>
+                <div class="feature-item negative">Brand May Disappear</div>
+                <div class="feature-item negative">Culture Clash Risk</div>
+              </div>
+            </div>
+          </div>
+
           <!-- Use a Broker Column -->
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="comparison-card neutral">
               <div class="card-header">
                 <div class="icon">
@@ -250,9 +290,9 @@
                 <div class="feature-item positive">Retirement</div>
                 <div class="feature-item positive">Cash Payout</div>
                 <div class="feature-item negative">3-6 month process</div>
-                <div class="feature-item negative">Employees fired</div>
-                <div class="feature-item negative">Intervene and change your culture</div>
-                <div class="feature-item negative">Typically flip your company in 3-5 years</div>
+                <div class="feature-item negative">High Commission Fees</div>
+                <div class="feature-item negative">Multiple Buyer Types</div>
+                <div class="feature-item negative">Uncertain Outcome</div>
               </div>
             </div>
           </div>
