Assistant checkpoint: Update Competitor column text
Assistant generated file changes:
- index.html: Update Competitor column text

---

User prompt:

can you change competitor to brand will disappear and replace culture with they win

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                 <div class="feature-item positive">Cash Payout</div>
                 <div class="feature-item negative">Extended Due Diligence</div>
                 <div class="feature-item negative">Staff Integration Issues</div>
-                <div class="feature-item negative">Brand May Disappear</div>
-                <div class="feature-item negative">Culture Clash Risk</div>
+                <div class="feature-item negative">Brand Will Disappear</div>
+                <div class="feature-item negative">They Win</div>
               </div>
             </div>
           </div>
