--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <div class="container">
         <div class="row gy-4">
           <!-- For Legacy Column -->
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
             <div class="comparison-card positive">
               <div class="card-header">
                 <div class="icon">
@@ -238,7 +238,7 @@
           </div>
 
           <!-- Private Equity Column -->
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="200">
             <div class="comparison-card neutral">
               <div class="card-header">
                 <div class="icon">
@@ -258,7 +258,7 @@
           </div>
 
           <!-- Competitor Column -->
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
             <div class="comparison-card neutral">
               <div class="card-header">
                 <div class="icon">
@@ -278,7 +278,7 @@
           </div>
 
           <!-- Shut Down Column -->
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
             <div class="comparison-card negative">
               <div class="card-header">
                 <div class="icon">
@@ -592,7 +592,7 @@
               </div>
             </div><!-- End Info Item -->
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
-              <i class="bi bi-envelope flex-shrink-0"></i>
+              <i class<i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
                 <p>info@forlegacy.co.uk</p>
