--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-xl-10">
             <div class="text-center">
-              <h3>Interested?</h3>
-              <p>Are you a business owner looking to preserve your legacy and retire? Contact us today to learn how we can help your business thrive for generations to come.</p>
-              <a class="cta-btn" href="#contact">Contact Us</a>
+              <h3>Wonder How Much Your Business Could Be Worth?</h3>
+              <p>Use our free business valuation calculator to get an estimate of your business's value and see how we can help preserve your legacy.</p>
+              <a class="cta-btn" href="https://business-valuation-calculator-daniel859.replit.app" target="_blank">Free Valuation Calculator</a>
             </div>
           </div>
         </div>
