--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-xl-10">
             <div class="text-center">
-              <h3>Wonder How Much Your Business Could Be Worth?</h3>
+              <h3>How Much Is Your Business Worth?</h3>
               <p>Use our free business valuation calculator to get an estimate of your business's value and see how we can help preserve your legacy.</p>
               <a class="cta-btn" href="https://business-valuation-calculator-daniel859.replit.app" target="_blank">Free Valuation Calculator</a>
             </div>
