Assistant checkpoint: Updated Get Started link to valuation calculator
Assistant generated file changes:
- index.html: Update Get Started link to valuation calculator

---

User prompt:

change the get started link to https://business-valuation-calculator-daniel859.replit.app instead of calendly

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted" href="https://calendly.com/forlegacy/synergycall?month=2024-10" aria-label="Schedule a consultation">Get Started</a>
+      <a class="btn-getstarted" href="https://business-valuation-calculator-daniel859.replit.app" aria-label="Start your business valuation">Get Started</a>
 
     </div>
   </header>
