Assistant checkpoint: Add contact form with hidden content functionality
Assistant generated file changes:
- sellersguide.html: Close hidden content div
Close hidden content div
- assets/js/guide-form.js: Add form handling JavaScript
- server.py: Update server to handle form submissions

---

User prompt:

Can we hide the content after Chapter 2 and have a carry on reading button which asks for a contact form of email company name name and phone number and submitting that stores the details in a csv and then loads the full page with the rest of the guide

--- a/sellersguide.html
+++ b/sellersguide.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,6 +24,11 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <style>
+    #hiddenContent {
+      display: none;
+    }
+  </style>
 </head>
 
 <body class="page-article">
@@ -60,7 +64,7 @@
             <article class="article">
               <div class="article-content">
                 <h1>The Removal Company Owner's Guide to a Fulfilling Retirement</h1>
-                
+
                 <div class="introduction mb-5">
                   <p class="lead">You've built something special - a removal company that's earned trust through years of reliable service. Now, as retirement approaches, you're facing an important question: How do you transition smoothly whilst protecting your legacy, team and financial security?</p>
                   <p>This guide will help you navigate each step thoughtfully and confidently.</p>
@@ -84,7 +88,7 @@
 
                 <h2>Chapter 2: Preparing Your Business for Transition</h2>
                 <p>A well-prepared business attracts quality buyers and ensures a smoother handover:</p>
-                
+
                 <h3>1. Organise Financials</h3>
                 <ul>
                   <li>Ensure accurate revenue and expense records</li>
@@ -106,96 +110,115 @@
                   <li>Maintain excellent service standards</li>
                 </ul>
 
-                <h2>Chapter 3: Exploring Your Options</h2>
-                <div class="options-grid row gy-4 mb-5">
-                  <div class="col-md-6">
-                    <div class="option-card h-100 p-4 bg-light rounded">
-                      <h3>1. Private Sale</h3>
+                <div id="hiddenContent">
+                  <h2>Chapter 3: Exploring Your Options</h2>
+                  <div class="options-grid row gy-4 mb-5">
+                    <div class="col-md-6">
+                      <div class="option-card h-100 p-4 bg-light rounded">
+                        <h3>1. Private Sale</h3>
+                        <ul>
+                          <li>Market through brokers or industry networks</li>
+                          <li>Connect with qualified local buyers</li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="option-card h-100 p-4 bg-light rounded">
+                        <h3>2. Legacy-Focused Buyer</h3>
+                        <ul>
+                          <li>Partner with specialists in business preservation</li>
+                          <li>Ensure continuity for staff and customers</li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="option-card h-100 p-4 bg-light rounded">
+                        <h3>3. Internal Succession</h3>
+                        <ul>
+                          <li>Transition to capable team members</li>
+                          <li>Support with training and financing options</li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="option-card h-100 p-4 bg-light rounded">
+                        <h3>4. Gradual Transition</h3>
+                        <ul>
+                          <li>Install strong management</li>
+                          <li>Maintain ownership with reduced involvement</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+
+                  <h2>Chapter 4: Managing the Sale Process</h2>
+                  <div class="process-steps">
+                    <div class="step mb-4">
+                      <h3>Step 1: Find Your Ideal Partner</h3>
                       <ul>
-                        <li>Market through brokers or industry networks</li>
-                        <li>Connect with qualified local buyers</li>
+                        <li>Evaluate buyers through trusted networks</li>
+                        <li>Consider their commitment to your legacy</li>
+                      </ul>
+                    </div>
+                    <div class="step mb-4">
+                      <h3>Step 2: Structure the Agreement</h3>
+                      <ul>
+                        <li>Understand tax implications</li>
+                        <li>Consider payment arrangements</li>
+                      </ul>
+                    </div>
+                    <div class="step mb-4">
+                      <h3>Step 3: Enable a Smooth Handover</h3>
+                      <ul>
+                        <li>Create a detailed transition plan</li>
+                        <li>Share knowledge systematically</li>
                       </ul>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <div class="option-card h-100 p-4 bg-light rounded">
-                      <h3>2. Legacy-Focused Buyer</h3>
-                      <ul>
-                        <li>Partner with specialists in business preservation</li>
-                        <li>Ensure continuity for staff and customers</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="option-card h-100 p-4 bg-light rounded">
-                      <h3>3. Internal Succession</h3>
-                      <ul>
-                        <li>Transition to capable team members</li>
-                        <li>Support with training and financing options</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="option-card h-100 p-4 bg-light rounded">
-                      <h3>4. Gradual Transition</h3>
-                      <ul>
-                        <li>Install strong management</li>
-                        <li>Maintain ownership with reduced involvement</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
 
-                <h2>Chapter 4: Managing the Sale Process</h2>
-                <div class="process-steps">
-                  <div class="step mb-4">
-                    <h3>Step 1: Find Your Ideal Partner</h3>
-                    <ul>
-                      <li>Evaluate buyers through trusted networks</li>
-                      <li>Consider their commitment to your legacy</li>
-                    </ul>
-                  </div>
-                  <div class="step mb-4">
-                    <h3>Step 2: Structure the Agreement</h3>
-                    <ul>
-                      <li>Understand tax implications</li>
-                      <li>Consider payment arrangements</li>
-                    </ul>
-                  </div>
-                  <div class="step mb-4">
-                    <h3>Step 3: Enable a Smooth Handover</h3>
-                    <ul>
-                      <li>Create a detailed transition plan</li>
-                      <li>Share knowledge systematically</li>
-                    </ul>
-                  </div>
-                </div>
-
-                <h2>Chapter 5: Securing Your Future</h2>
-                <p>Consider these important elements:</p>
-                <ul>
-                  <li>Tax-efficient exit structures</li>
-                  <li>Investment planning for proceeds</li>
-                  <li>Long-term wealth preservation</li>
-                </ul>
-
-                <div class="conclusion-box bg-light p-4 rounded mt-5">
-                  <h2>Conclusion: Preserving Your Legacy</h2>
-                  <p>With proper planning, transitioning your removal company can open an exciting new chapter whilst ensuring what you've built continues to thrive. Whether you choose a private sale, legacy-focused buyer, or internal succession, taking time to prepare will protect what matters most.</p>
-                  <div class="cta-box text-center mt-4">
-                    <p class="mb-4">Want to explore your options? Let's have a conversation about your business's future.</p>
-                    <a href="https://business-valuation-calculator-daniel859.replit.app" class="btn btn-primary btn-lg">Start Your Valuation</a>
-                  </div>
-                </div>
-
-                <div class="resources-box mt-5">
-                  <h3>Additional Resources:</h3>
+                  <h2>Chapter 5: Securing Your Future</h2>
+                  <p>Consider these important elements:</p>
                   <ul>
-                    <li><a href="https://business-valuation-calculator-daniel859.replit.app">Business Valuation Calculator</a></li>
-                    <li><a href="#contact">Exit Planning Checklist</a></li>
-                    <li><a href="#contact">Tax Guide</a></li>
+                    <li>Tax-efficient exit structures</li>
+                    <li>Investment planning for proceeds</li>
+                    <li>Long-term wealth preservation</li>
                   </ul>
+
+                  <div class="conclusion-box bg-light p-4 rounded mt-5">
+                    <h2>Conclusion: Preserving Your Legacy</h2>
+                    <p>With proper planning, transitioning your removal company can open an exciting new chapter whilst ensuring what you've built continues to thrive. Whether you choose a private sale, legacy-focused buyer, or internal succession, taking time to prepare will protect what matters most.</p>
+                    <div class="cta-box text-center mt-4">
+                      <p class="mb-4">Want to explore your options? Let's have a conversation about your business's future.</p>
+                      <a href="https://business-valuation-calculator-daniel859.replit.app" class="btn btn-primary btn-lg">Start Your Valuation</a>
+                    </div>
+                  </div>
+
+                  <div class="resources-box mt-5">
+                    <h3>Additional Resources:</h3>
+                    <ul>
+                      <li><a href="https://business-valuation-calculator-daniel859.replit.app">Business Valuation Calculator</a></li>
+                      <li><a href="#contact">Exit Planning Checklist</a></li>
+                      <li><a href="#contact">Tax Guide</a></li>
+                    </ul>
+                  </div>
                 </div>
+
+
+                <button id="showMoreButton">Carry On Reading</button>
+
+                <form id="contactForm" style="display:none;">
+                  <h2>Contact Information</h2>
+                  <label for="email">Email:</label><br>
+                  <input type="email" id="email" name="email"><br>
+                  <label for="companyName">Company Name:</label><br>
+                  <input type="text" id="companyName" name="companyName"><br>
+                  <label for="name">Your Name:</label><br>
+                  <input type="text" id="name" name="name"><br>
+                  <label for="phone">Phone Number:</label><br>
+                  <input type="tel" id="phone" name="phone"><br><br>
+                  <button type="submit">Submit</button>
+                </form>
+
               </div>
             </article>
           </div>
@@ -221,6 +244,49 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+    document.getElementById('showMoreButton').addEventListener('click', function() {
+      document.getElementById('hiddenContent').style.display = 'block';
+      document.getElementById('showMoreButton').style.display = 'none';
+      document.getElementById('contactForm').style.display = 'block';
+    });
+
+    document.getElementById('contactForm').addEventListener('submit', function(event) {
+      event.preventDefault();
+      const email = document.getElementById('email').value;
+      const companyName = document.getElementById('companyName').value;
+      const name = document.getElementById('name').value;
+      const phone = document.getElementById('phone').value;
+
+      //Data to be sent as CSV format:
+      const csvData = `Email,Company Name,Name,Phone\n${email},${companyName},${name},${phone}`;
+
+      //Simulate sending data to server for CSV storage.  Replace with actual server-side code.
+      fetch('/submit-contact-form', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'text/plain'
+        },
+        body: csvData
+      })
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        return response.text();
+      })
+      .then(data => {
+        console.log('Success:', data);
+        //Optional: Show success message to the user.
+      })
+      .catch(error => {
+        console.error('Error:', error);
+        //Optional: Show error message to the user.
+      });
+
+
+    });
+  </script>
 
 </body>
 </html>
