--- a/sellersguide.html
+++ b/sellersguide.html
@@ -203,22 +203,19 @@
                   </div>
                 </div>
 
-
-                <button id="showMoreButton" class="btn btn-primary">Read More</button>
-
-                <form id="contactForm" style="display:none;">
+                <form id="contactForm">
                   <div class="card mt-4 p-4">
-                    <h4>Want to save this guide for later?</h4>
-                    <p>Enter your details to receive a copy of this guide.</p>
+                    <h4>Enter your details to read the full guide</h4>
+                    <p>We'll keep you updated with more valuable insights.</p>
                     <label for="email">Email:</label><br>
-                    <input type="email" id="email" name="email" class="form-control mb-2"><br>
+                    <input type="email" id="email" name="email" class="form-control mb-2" required><br>
                     <label for="companyName">Company Name:</label><br>
-                    <input type="text" id="companyName" name="companyName" class="form-control mb-2"><br>
+                    <input type="text" id="companyName" name="companyName" class="form-control mb-2" required><br>
                     <label for="name">Your Name:</label><br>
-                    <input type="text" id="name" name="name" class="form-control mb-2"><br>
+                    <input type="text" id="name" name="name" class="form-control mb-2" required><br>
                     <label for="phone">Phone Number:</label><br>
-                    <input type="tel" id="phone" name="phone" class="form-control mb-2"><br>
-                    <button type="submit" class="btn btn-primary">Send me the guide</button>
+                    <input type="tel" id="phone" name="phone" class="form-control mb-2" required><br>
+                    <button type="submit" id="showMoreButton" class="btn btn-primary">Read More</button>
                   </div>
                 </form>
 
@@ -248,13 +245,6 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
   <script>
-    document.getElementById('showMoreButton').addEventListener('click', function() {
-      document.getElementById('hiddenContent').style.display = 'block';
-      document.getElementById('showMoreButton').style.display = 'none';
-      document.getElementById('contactForm').style.display = 'block';
-      window.scrollBy(0, 100); // Smooth scroll down a bit
-    });
-
     document.getElementById('contactForm').addEventListener('submit', function(event) {
       event.preventDefault();
       const formData = {
@@ -273,6 +263,7 @@
       // Hide form and show content
       document.getElementById('contactForm').style.display = 'none';
       document.getElementById('hiddenContent').style.display = 'block';
+      window.scrollBy(0, 100); // Smooth scroll down a bit
     });
   </script>
 
